--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Frontend Mentor | Clipboard landing page</title>
 </head>
 <body>
     <header class="header">
         <div class="header__content">
-            <img src="/images/logo.svg" alt="Company logo">
+            <img src="/images/logo.svg" class="logo" alt="Company logo">
             <h1>A history of everything you copy</h1>
-            <br>
             <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-            <button class="btn">Download for iOS</button>
-            <button class="btn">Download for Mac</button>
+            <button class="btn btn-ios">Download for iOS</button>
+            <button class="btn btn-mac">Download for Mac</button>
         </div>
     </header>
 
     <div class="snippets">
         <div class="snippets__main">
             <h2>Keep track of your snippets</h2>
-            <br>
             <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.
             </p>
         </div>
@@ -62,19 +61,16 @@
             <div class="tool">
                 <img src="/images/icon-blacklist.svg" alt="Paper scroll">
                 <h4>Create blacklists</h4>
-                <br>
                 <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
             </div>
             <div class="tool">
                 <img src="/images/icon-text.svg" alt="Text editor">
                 <h4>Plain text snippets</h4>
-                <br>
                 <p>Remove unwanted formatting from copied text for a consistent look.</p>
             </div>
             <div class="tool">
                 <img src="/images/icon-preview.svg" alt="Eye illustration">
                 <h4>Sneak preview</h4>
-                <br>
                 <p>Quick preview of all snippets on your Clipboard for easy access.</p>
             </div>
         </div>
@@ -90,30 +86,39 @@
 
     <div class="cta">
         <h2>Clipboard for iOS and Mac</h2>
-        <br>
         <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
-        <button class="btn">Download for iOS</button>
-        <button class="btn">Download for Mac</button>
+        <button class="btn btn-ios">Download for iOS</button>
+        <button class="btn btn-mac">Download for Mac</button>
     </div>
 
     <footer class="footer">
-        <img src="/images/logo.svg" alt="Company logo">
-        <div class="resource__links">
+        <div class="resources">
+            <img src="/images/logo.svg" class="logo" alt="Company logo">
             <ul>
-                <li>FAQ</li>
-                <li>Contact Us</li>
+                <li>
+                    <a href="#">FAQ</a> 
+                </li>
+                <li>
+                    <a href="#">Contact Us</a> 
+                </li>
             </ul>
             <ul>
-                <li>Privacy Policy</li>
-                <li>Press Kit</li>
+                <li>
+                    <a href="#">Privacy Policy</a> 
+                </li>
+                <li>
+                    <a href="#">Press Kit</a> 
+                </li>
             </ul>
             <ul>
-                <li>Install Guide</li>
+                <li>
+                    <a href="#">Install Guide</a> 
+                </li>
             </ul>
         </div>
-        <div class="social__links">
+        <div class="socials">
             <a href="#" aria-label="View on Facebook">
-                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-facebook-square"></i>
             </a>
             <a href="#" aria-label="Follow on Twitter">
                 <i class="fab fa-twitter"></i>
