--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>Frontend Mentor | Clipboard landing page</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header__content">
@@ -49,9 +50,7 @@
             <h2>Access Clipboard anywhere</h2>
             <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
         </div>
-        <div class="access__hero">
-            <img src="images/image-devices.png" alt="Mobile devices">
-        </div>
+        <img src="/images/image-devices.png" alt="Mobile devices">
     </div>
 
     <div class="supercharge">
@@ -59,12 +58,12 @@
         <p>We’ve got the tools to boost your productivity.</p>
         <div class="supercharge__tools">
             <div class="tool">
-                <img src="/images/icon-blacklist.svg" alt="Paper scroll">
+                <img src="/images/icon-blacklist.svg" alt="Paper scroll illustration">
                 <h4>Create blacklists</h4>
                 <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
             </div>
             <div class="tool">
-                <img src="/images/icon-text.svg" alt="Text editor">
+                <img src="/images/icon-text.svg" alt="Text editor illustration">
                 <h4>Plain text snippets</h4>
                 <p>Remove unwanted formatting from copied text for a consistent look.</p>
             </div>
